# calmweb

./: README.md  build_calmweb.cmd  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  validate_tests.py
.claude/: settings.local.json
.github/workflows/: test.yml
filters/: blocklist.txt  remote_desktop.txt  usefull_domains.txt  whitelist.txt
program/: calmweb.py  calmweb_installer.py
tests/: README.md  __init__.py  conftest.py  test_blocklist_resolver.py  test_core_functions.py  test_integration.py  test_performance.py  test_proxy_handler.py  test_security.py  test_utilities.py  test_windows_specific.py
