[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calmweb"
version = "1.0.0"
description = "A proxy/web filter to protect users from ads, scams, and malicious websites"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Tonton Jo", email = "tontonjo@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
]
requires-python = ">=3.8"
dependencies = [
    "urllib3>=1.26.0",
    "dnspython>=2.0.0",
    "Pillow>=8.0.0",
    "pystray>=0.17.0",
    "pywin32>=300; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-xdist>=3.3.1",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-benchmark>=4.0.0",
    "responses>=0.23.3",
    "httpx>=0.25.0",
    "aioresponses>=0.7.4",
    "pytest-httpserver>=1.0.8",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "coverage[toml]>=7.3.0",
    "pytest-html>=3.2.0",
    "Faker>=19.6.2",
    "memory-profiler>=0.61.0",
    "mypy>=1.5.1",
    "ruff>=0.0.291",
]
dev = [
    "calmweb[test]",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/Tontonjo/calmweb"
Documentation = "https://github.com/Tontonjo/calmweb#readme"
Repository = "https://github.com/Tontonjo/calmweb"
Issues = "https://github.com/Tontonjo/calmweb/issues"

[project.scripts]
calmweb = "program.calmweb:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=program",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--durations=10",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security-focused tests",
    "network: Tests requiring network access",
    "slow: Slow running tests",
    "windows: Windows-specific tests",
    "proxy: HTTP proxy tests",
    "blocklist: Domain blocking tests",
    "config: Configuration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*urllib3.*:urllib3.exceptions.NotOpenSSLWarning",
]

[tool.coverage.run]
source = ["program"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["calmweb"]
known_third_party = [
    "pytest",
    "urllib3",
    "dnspython",
    "PIL",
    "pystray",
    "win32ui",
    "win32gui",
    "win32con",
    "win32com",
    "winreg",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "win32ui.*",
    "win32gui.*",
    "win32con.*",
    "win32com.*",
    "winreg.*",
    "pystray.*",
    "PIL.*",
    "dns.*",
]
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "S",  # bandit security
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert detected (pytest uses assert)
    "S603",  # subprocess call: check for execution of untrusted input
    "S607",  # starting a process with a partial executable path
]
line-length = 88
target-version = "py38"

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",  # assert usage in tests
    "S105",  # hardcoded password in tests
    "S106",  # hardcoded password in tests
    "S108",  # insecure temp file usage in tests
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B603", "B607"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]